<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Queen</string>
    <string name="enter_button_text">Enter</string>
    <string name="queen_logo_desc">Queen Logo</string>
    <string name="member_photo">Member Photo</string>
    <string name="selected_member_photo">Selected Member Photo</string>
    <string name="choose_member">Select a member</string>
    <string name="queen_header">QUEEN</string>
    <string name="back_button_desc">Back to main screen</string>
</resources>
